dnl Process this file with autoconf to produce a configure script.
#
# here we specify a file and its location so that configure knows
# how to establish the srcdir
#
AC_INIT(m2/comp/gm2s/CH/M2Alias.c)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LEX
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.
# dnl Replace `main' with a function in -lc:
AC_CHECK_LIB(c, strlen)
# dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, sin)
# dnl Replace `main' with a function in -lt:
# AC_CHECK_LIB(t, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_MODE_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_MEMCMP
AC_FUNC_STRFTIME
AC_CHECK_FUNCS(getcwd gettimeofday mkdir putenv select strtod strtol)

#
# build all Makefiles except ./Makefile which is built by gcc in the directory above
#

AC_OUTPUT(m2/comp/autotest/run/fail/Makefile m2/comp/autotest/dynamic/Makefile m2/comp/tools/Makefile m2/comp/autotest/warnings/Makefile m2/comp/Makefile m2/comp/p2c/examples/Makefile m2/Makefile m2/comp/autotest/fpu/Makefile m2/comp/autotest/Makefile m2/comp/man/Makefile m2/comp/p2c/src/Makefile m2/comp/autotest/run/Makefile m2/comp/autotest/types/Makefile m2/comp/test/Makefile m2/comp/autotest/run/pass/Makefile m2/comp/autotest/cse/Makefile m2/comp/autotest/errors/Makefile m2/comp/p2c/Makefile Makefile-m2f)
