#   Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009,
#                 2010
#                 Free Software Foundation, Inc.

# This file is part of GNU Modula-2.

# GNU Modula-2 is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.

# GNU Modula-2 is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with GNU CC; see the file COPYING.  If not, write to
# the Free Software Foundation, 51 Franklin Street, Fifth Floor,
# Boston, MA 02110-1301, USA.  */

# Process this file with autoconf to produce a configure script.

AC_INIT(gccgm2.c, 1.0.3, gm2@nongnu.org)
AC_CONFIG_HEADER(gm2config.h:gm2config.h.in)
AC_PATH_PROGS(AR_PATH, ${AR}, ar)

AC_CHECK_PROGS(regex_flex, flex)
if test x$regex_flex = "x" ; then
    AC_MSG_ERROR([flex is required to build GNU Modula-2 (hint install flex).])
fi

AC_DEFINE_UNQUOTED(AR_PATH, "$AR_PATH", the path to target archiver)
AC_PATH_PROGS(RANLIB_PATH, ${RANLIB}, ranlib)
AC_DEFINE_UNQUOTED(RANLIB_PATH, "$RANLIB_PATH", the path to target ranlib)
AC_OUTPUT
