dnl Process this file with autoconf to produce a configure script.

AC_INIT
AC_CONFIG_SRCDIR([version.c])

dnl Checks for typedefs, structures, and compiler characteristics.
GM2_HARNESS_GCC_OPTION
GM2_HARNESS_DEV_OPTION
GM2_HARNESS_CACHE_OPTION

dnl check for critical dependencies
AC_PATH_PROG(GIT, git, /usr/bin/git, $PATH:/usr/bin)
AC_PATH_PROG(BASH, bash, /bin/bash, $PATH:/bin)

dnl create these files
AC_CONFIG_FILES([Makefile config-values])
AC_OUTPUT
