# Process this file with autoconf to produce a configure script.
AC_INIT(ASCII.def, 0.42, gm2@glam.ac.uk)
AC_CONFIG_HEADER(auto-host.h:auto-host.h.in)

# Checks for programs.

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_TIME
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(limits.h stddef.h string.h strings.h stdlib.h time.h \
		 fcntl.h unistd.h sys/file.h sys/time.h sys/mman.h \
		 sys/resource.h sys/param.h sys/times.h sys/stat.h \
                 sys/wait.h \
		 pwd.h direct.h malloc.h langinfo.h)

# Checks for typedefs, structures, and compiler characteristics.

AC_HEADER_STAT
AC_STRUCT_TM
AC_FUNC_ALLOCA
AC_FUNC_SELECT_ARGTYPES

# Checks for library functions.

AC_CHECK_FUNCS(ctime)
AC_CHECK_FUNCS(rand)
AC_CHECK_FUNCS(fstat)
AC_CHECK_FUNCS(select)

AC_CHECK_TYPE(stat, timeval)

# AC_CONFIG_FILES([])
AC_OUTPUT
