dnl Process this file with autoconf to produce a configure script.
AC_INIT(HP/include/general_0.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LEX
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h malloc.h string.h strings.h sys/time.h unistd.h sys/param.h stdlib.h errno.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(gettimeofday strtod strtol)
AC_CONFIG_HEADER(auto-host.h)

AC_OUTPUT(examples/Makefile src/Makefile Makefile, echo timestamp > stamp-h)
